--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "picperf/statamic-picperf",
   "license": "MIT",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "autoload": {
     "psr-4": {
       "PicPerf\\StatamicPicPerf\\": "src"
@@ -19,7 +19,8 @@
     }
   },
   "require-dev": {
-    "pestphp/pest": "^2.34"
+    "pestphp/pest": "^2.34",
+    "mockery/mockery": "^1.6"
   },
   "config": {
     "allow-plugins": {
