--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,6 @@
   },
   "require": {
     "illuminate/support": "*",
-    "statamic/cms": "^3.2|^4.0"
+    "statamic/cms": "^3.2|^4.0|^5.0"
   }
 }
